# aead

./: .gitignore  CHANGELOG  README.md  flake.nix  ppad-aead.cabal
bench/: Main.hs
lib/Crypto/AEAD/: ChaCha20Poly1305.hs
lib/Data/: Barrier.hs
test/: Main.hs  Wycheproof.hs
