cabal-version:      3.0
name:               ppad-aead
version:            0.1.0
synopsis:           A pure AEAD-ChaCha20-Poly1305 construction
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.8.1
extra-doc-files:    CHANGELOG
description:
  A pure authenticated encryption with associated data
  (AEAD) implementation supporting ChaCha20-Poly1305, per
  [RFC8439](https://datatracker.ietf.org/doc/html/rfc8439).

source-repository head
  type:     git
  location: git.ppad.tech/aead.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Crypto.AEAD.ChaCha20Poly1305
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , ppad-chacha
    , ppad-poly1305

test-suite aead-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      base
    , bytestring
    , ppad-base16
    , ppad-aead
    , primitive
    , tasty
    , tasty-hunit

benchmark aead-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , bytestring
    , criterion
    , ppad-base16
    , ppad-aead

